# GOntoSim

./: .gitignore  GOntoSim.py  Semantic Similarity-code.ipynb  Similarity.py  example.py  pyproject.toml  run.py
bp/iea/: all_bp_classes.txt  class1  class2  class3  class4  class5  class6  unique_goterms_bp.txt
bp/noniea/: all_bp_classes  all_bp_true_labels  class1  class2  class3  class4  class5  class6  unique
mf/iea/: all_mf_classes.txt  all_mf_true_labels.txt  class1_mf_IEA.txt  class2_mf_IEA.txt  class3_mf_IEA.txt  class4_mf_IEA.txt  class5_mf_IEA.txt  class6_mf_IEA.txt  unique_goterms_mf.txt
mf/noniea/: all_mf_classes_NONIEA.txt  class1_mf.txt  class2_mf.txt  class3_mf.txt  class4_mf.txt  class5_mf.txt  class6_mf.txt  unique_goterms_mf_NONIEA.txt
notebooks/: Download GO annotations And Convert to Named Tuples.ipynb  GOntoSim-Example Usage.ipynb
