[tool.poetry]
name = "gontosim"
version = "0.1.0"
description = ""
authors = ["vincent <hankggg2003xd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
goatools = "^1.4.12"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
